@@ -105,6 +105,7 @@
 	* added info_hash to torrent_deleted_alert
 	* improved LSD performance and made the interval configurable
 	* improved UDP tracker support by caching connect tokens
+	* fixed issue with disk read cache not being cleared when removing torrents
 
 release 0.14.9
 
